kubernetes/nginx-full-k8s/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx
  #namespace: testing
  labels:
    app: nginx
spec:
  revisionHistoryLimit: 5 #default 10
  strategy:
    type: RollingUpdate #default Recreate
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-image
        image: nginx:alpine
        ports:
        - name: http
          containerPort: 80
